# A01794692_A6-2

./: .coverage  .flake8  README.md  pyproject.toml
ReservationSytem/coverage_reports/: coverage_report_213415.txt  coverage_report_213854.txt  coverage_report_214429.txt  coverage_report_214820.txt  coverage_report_214958.txt  coverage_report_223432.txt  coverage_report_225548.txt
ReservationSytem/data/: Grand Hotel.json  Updated Customer.json  Updated Hotel.json
ReservationSytem/flake8_reports/: flake8_issues_20250215_224313.txt  flake8_issues_20250215_224957.txt  flake8_issues_20250215_225023.txt  flake8_issues_20250215_225310.txt  flake8_issues_20250215_225333.txt
ReservationSytem/pylint_reports/: pylint_report_215416.txt  pylint_report_215612.txt  pylint_report_215852.txt  pylint_report_220033.txt  pylint_report_220205.txt  pylint_report_221728.txt  pylint_report_221912.txt  pylint_report_222056.txt  pylint_report_222214.txt  pylint_report_222256.txt  pylint_report_222639.txt  pylint_report_222956.txt  pylint_report_223145.txt
ReservationSytem/src/: reservation_system.py  test.py
ReservationSytem/src/flake8_reports/: flake8_issues_20250215_223500.txt  flake8_issues_20250215_224405.txt  flake8_issues_20250215_224639.txt  flake8_issues_20250215_224703.txt  flake8_issues_20250215_224824.txt  flake8_issues_20250215_224855.txt  flake8_issues_20250215_225051.txt  flake8_issues_20250215_225353.txt  flake8_issues_20250215_231141.txt
ReservationSytem/src/utils/: run_coverage.py  run_flake8.py  run_pytlint.py
ReservationSytem/tests/: test_reservation_system.py
