[tool.poetry]
name = "qualitysoftware-p310"
version = "0.1.0"
description = ""
authors = ["Edwin Hernandez <edwin.hdez@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.3"
coverage = "^7.6.12"
pylint = "^3.3.4"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
